YMCA-1605: change color of text to black; remove underline for icon link on hoover

--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -500,6 +500,10 @@ html, body {
   margin-bottom: 50px;
   line-height: 1.2em;
   text-transform: none;
+  color: #000000;
+}
+.theme-ymca--2017-compain-upcoming .compain-upcoming .compain-header .container .content a:hover, .theme-ymca--2017-compain-upcoming .compain-upcoming .compain-header .container .content a:focus {
+  text-decoration: none;
 }
 .theme-ymca--2017-compain-upcoming .compain-upcoming .compain-header--content .logo {
   display: block;
