--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -442,6 +442,10 @@ html, body {
           margin-bottom: 50px ;
           line-height: 1.2em;
           text-transform: none;
+          color: #000000;
+        }
+        a:hover, a:focus {
+          text-decoration: none;
         }
       }
       &--content {
