--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -1998,6 +1998,70 @@ body {
   padding: 20px 0;
 }
 
+.paragraph--type--classes-listing-filters {
+  background-color: #ebebeb;
+}
+.paragraph--type--classes-listing-filters form {
+  background-color: #bfe1f3;
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+}
+@media (min-width: 48em) {
+  .paragraph--type--classes-listing-filters form {
+    background-color: #ebebeb;
+    margin-bottom: 40px;
+    padding-bottom: 0;
+  }
+}
+.paragraph--type--classes-listing-filters .js-form-type-select {
+  display: inline-block;
+  padding: 10px 0 5px;
+  width: 100%;
+}
+@media (min-width: 48em) {
+  .paragraph--type--classes-listing-filters .js-form-type-select {
+    float: left;
+    padding: 15px 0;
+    margin-right: 18px;
+    width: 125px;
+  }
+}
+@media (min-width: 62em) {
+  .paragraph--type--classes-listing-filters .js-form-type-select {
+    width: 170px;
+  }
+}
+@media (min-width: 75em) {
+  .paragraph--type--classes-listing-filters .js-form-type-select {
+    width: 200px;
+  }
+}
+.paragraph--type--classes-listing-filters .js-form-type-select label {
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: "Cachet W01 Book", 'Ubuntu Condensed', sans-serif;
+  color: #4f4f4f;
+  margin-bottom: 0;
+}
+@media (min-width: 48em) {
+  .paragraph--type--classes-listing-filters .js-form-type-select label {
+    margin-bottom: 5px;
+  }
+}
+.paragraph--type--classes-listing-filters .js-form-type-select select {
+  text-transform: uppercase;
+  color: #4f4f4f;
+  font-family: "Cachet W01 Book", 'Ubuntu Condensed', sans-serif;
+}
+.paragraph--type--classes-listing-filters .form-actions {
+  margin-top: 10px;
+}
+@media (min-width: 48em) {
+  .paragraph--type--classes-listing-filters .form-actions {
+    margin-top: 31px;
+  }
+}
+
 .site-alert {
   font-family: "Cachet W01 Book", 'Ubuntu Condensed', sans-serif;
   width: 100%;
@@ -2605,7 +2669,7 @@ body {
   line-height: 1.6;
   letter-spacing: -0.8px;
   color: #5c2e91;
-  margin: 0 15px 20px;
+  margin: 15px 15px 20px;
 }
 .sub-category-classes-view .activity-group .row {
   margin-bottom: 40px;
@@ -2639,7 +2703,7 @@ body {
   color: #333333;
 }
 .sub-category-classes-view .activity-group .activity-group-slider {
-  margin: 0 0 75px;
+  margin: 0 0 60px;
 }
 @media (min-width: 0) and (max-width: 48em) {
   .sub-category-classes-view .activity-group .activity-group-slider {
@@ -2670,20 +2734,44 @@ body {
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow {
   background: none;
   color: #00aeef;
-  margin-top: -7px;
   padding: 0;
   z-index: 1;
-  height: 70px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
+  margin-top: -7px;
+}
+.sub-category-classes-view .activity-group .activity-group-slider .slick-arrow:before {
+  color: #00aeef;
+}
+@media (min-width: 48em) {
+  .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow {
+    height: 70px;
+    width: 50px;
+  }
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow .fa {
-  font-size: 70px;
+  font-size: 30px;
+}
+@media (min-width: 48em) {
+  .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow .fa {
+    font-size: 70px;
+  }
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow.slick-prev {
-  left: -50px;
+  left: -20px;
+}
+@media (min-width: 48em) {
+  .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow.slick-prev {
+    left: -45px;
+  }
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow.slick-next {
-  right: -50px;
+  right: -20px;
+}
+@media (min-width: 48em) {
+  .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow.slick-next {
+    right: -45px;
+  }
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-dots li button:before {
   opacity: 1;
@@ -4133,6 +4221,9 @@ html.js .branch__updates_queue__button {
   font-size: 15px;
   line-height: 1.5;
   color: #333333;
+}
+.node--type-class.node--view-mode-teaser p:after {
+  content: "...";
 }
 
 .class-page-other-sessions .session .name {
