--- a/prototypes/scss/paragraphs/columns.scss
+++ b/prototypes/scss/paragraphs/columns.scss
@@ -106,3 +106,14 @@
     }
   }
 }
+
+article .node--view-mode-flexible-content {
+  h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    a span {
+      font-family: CachetBook;
+      font-size: 36px;
+    }
+  }
+}
