YLI-151: Footer styling and basic theme setup.

--- a/openy_lily/sass/global/_fonts.scss
+++ b/openy_lily/sass/global/_fonts.scss
@@ -12,3 +12,8 @@
   @include cachet();
   font-weight: bold;
 }
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
