--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -126,47 +126,33 @@
     {% endblock %}
 
     {% if page.highlighted %}
-    <div class="container alerts-wrapper">
-      {{ page.highlighted }}
-    </div>
+      <div class="container alerts-wrapper">
+        {{ page.highlighted }}
+      </div>
     {% endif %}
 
     {% block content %}
       {{ page.content }}
     {% endblock %}
   </div>
-
-
-
-
   <!--googleoff: index-->
-  <footer id="page-footer" class="page-footer footer-themes-b">
+  <footer id="page-footer" class="page-footer text-center footer-themes-b">
     <div class="container">
 
-      {% if page.footer %}
-        {{ page.footer }}
+      {% if page.footer_menu %}
+        {{ page.footer_menu }}
+      {% endif %}
+      {% if page.footer_social %}
+
+      {{ page.footer_social }}
       {% endif %}
 
-
-      <div class="col-sm-3 text-center">
-
-        {% include "@openy_lily/include/brand-link.html.twig" %}
-
-      </div>
-
-      <nav class="col-sm-6">
-        <nav class="nav-footer row">
-          {{ page.footer_menu }}
-        </nav>
-      </nav>
-      <div class="col-sm-3 social-disclaimer">
-        {{ page.footer_social }}
-        <p id="cw"></p>
-      </div>
     </div>
   </footer>
 
-  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
+  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top"
+                                                                                  class="btn btn-default"><span
+        class="glyphicon glyphicon-chevron-up"></span></a></div>
 
   <section class="messages"> {{ page.messages }} </section>
 
@@ -179,7 +165,8 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal" aria-hidden="true"></i></span>
+        <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal"
+                                     aria-hidden="true"></i></span>
         <div id="modal-title" class="modal-title"></div>
       </div>
       <div id="modal-body" class="modal-body"></div>
