YLI-151: Initial header styling.

--- a/openy_lily/sass/global/_variables.scss
+++ b/openy_lily/sass/global/_variables.scss
@@ -6,6 +6,8 @@ $base-font-size: 10px;
 // Colors
 $blue: #428bca;
 $gray: #a8a8a8;
+$gray-light: #f8f8f8;
+$gray-dark: #777777;
 
 // Mobile.
 $mobile-bp: 320px;
