--- a/openy_lily/sass/style.scss
+++ b/openy_lily/sass/style.scss
@@ -3,8 +3,10 @@
 @import 'global/colors';
 @import 'global/variables';
 @import 'global/fonts';
+@import 'global/transition';
 
 @import 'misc/toolbar';
+@import 'misc/header';
 @import 'misc/footer';
 @import 'misc/styleguide';
 @import 'misc/frontpage';
