--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -17,6 +17,56 @@ body {
   left: 150px;
 }
 
+body {
+  padding-top: 138px !important;
+}
+
+@media (min-width: 1200px) {
+  header .container-fluid {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+}
+header .top-navs {
+  background-color: #f8f8f8;
+}
+header .top-navs .nav-global {
+  margin-bottom: 0;
+}
+header .top-navs .nav-global .navbar-header {
+  padding: 5px 0 8px;
+}
+header .top-navs #block-openy-lily-main-menu {
+  width: 100%;
+  background: rgba(0, 96, 175, 0.95) !important;
+}
+header .top-navs #block-openy-lily-main-menu ul {
+  float: none;
+}
+header .top-navs #block-openy-lily-main-menu ul li a {
+  color: white;
+  padding: 20px 25px;
+}
+header .top-navs #block-openy-lily-user-menu li a {
+  color: #777777;
+  border-top: 2px solid transparent;
+  line-height: 50px;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+header .top-navs #block-openy-lily-user-menu li a:hover {
+  border-top: 2px solid #aa228d;
+  background-color: #fff;
+  color: black;
+}
+header #block-openy-lily-branding a img {
+  width: 85px;
+  height: auto;
+}
+
 .social-disclaimer .contextual-region .contextual .contextual-links li {
   width: auto;
 }
@@ -1258,9 +1308,10 @@ body .ajax-progress-throbber .throbber {
 #mindbody-pt-form-wrapper .header-row .change {
   font-size: 15px;
   font-size: 1.5rem;
-  -moz-transition: color 0.5s;
-  -o-transition: color 0.5s;
   -webkit-transition: color 0.5s;
+  -moz-transition: color 0.5s;
+  -ms-transition: color 0.5s;
+  -o-transition: color 0.5s;
   transition: color 0.5s;
   color: #0089d0;
   float: right;
@@ -1368,9 +1419,10 @@ body .ajax-progress-throbber .throbber {
   position: absolute;
   top: 0;
   vertical-align: middle;
-  -moz-transition: background-color 0.5s, border-color 0.5s;
-  -o-transition: background-color 0.5s, border-color 0.5s;
   -webkit-transition: background-color 0.5s, border-color 0.5s;
+  -moz-transition: background-color 0.5s, border-color 0.5s;
+  -ms-transition: background-color 0.5s, border-color 0.5s;
+  -o-transition: background-color 0.5s, border-color 0.5s;
   transition: background-color 0.5s, border-color 0.5s;
 }
 @media screen and (max-width: 767px) {
@@ -1913,9 +1965,10 @@ body .ajax-progress-throbber .throbber {
   position: absolute;
   right: 15px;
   text-decoration: none;
-  -moz-transition: color 0.5s;
-  -o-transition: color 0.5s;
   -webkit-transition: color 0.5s;
+  -moz-transition: color 0.5s;
+  -ms-transition: color 0.5s;
+  -o-transition: color 0.5s;
   transition: color 0.5s;
 }
 @media screen and (max-width: 767px) {
