--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -57,29 +57,25 @@
  */
 #}
 
-<a href="#main" id="skip-link">{{ "Skip to main content"|t }}</a>
-
-<div id="top"></div>
 
 {% include "@openy_lily/include/sidebar-search-and-menu.html.twig" %}
 
 <div class="viewport">
-  {{ page.header }}
-  <header id="page-head" class="page-head">
+  <header id="page-head" class="page-head clearfix">
     <div class="top-navs navbar-fixed-top" data-spy="affix" data-offset-top="1">
 
       {% include "@openy_lily/include/site-search.html.twig" %}
       {% include "@openy_lily/include/support.html.twig" %}
 
       <nav class="nav-global navbar-default navbar">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
             <button class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-left">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ base_path }}">{{ site_name }}</a>
+            {{ page.header }}
           </div>
 
           {# TODO: replace with top menu #}
@@ -126,9 +122,9 @@
     {% endblock %}
 
     {% if page.highlighted %}
-      <div class="container alerts-wrapper">
-        {{ page.highlighted }}
-      </div>
+    <div class="container alerts-wrapper">
+      {{ page.highlighted }}
+    </div>
     {% endif %}
 
     {% block content %}
@@ -142,17 +138,13 @@
       {% if page.footer_menu %}
         {{ page.footer_menu }}
       {% endif %}
-      {% if page.footer_social %}
-
-      {{ page.footer_social }}
-      {% endif %}
-
+      <div class="col-sm-12 social-disclaimer">
+        {{ page.footer_social }}
+      </div>
     </div>
   </footer>
 
-  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top"
-                                                                                  class="btn btn-default"><span
-        class="glyphicon glyphicon-chevron-up"></span></a></div>
+  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
 
   <section class="messages"> {{ page.messages }} </section>
 
@@ -165,8 +157,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal"
-                                     aria-hidden="true"></i></span>
+        <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal" aria-hidden="true"></i></span>
         <div id="modal-title" class="modal-title"></div>
       </div>
       <div id="modal-body" class="modal-body"></div>
