YMCA-1605: update logo, update text, remove background

--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -439,7 +439,7 @@ html, body {
 .theme-ymca--2017-compain-upcoming {
   height: 100%;
   position: relative;
-  background: #fff url("../prototypes/ysr_2017/img/bg-page-upcoming.jpg") 50% 0 no-repeat;
+  background: none;
 }
 .theme-ymca--2017-compain-upcoming .viewport,
 .theme-ymca--2017-compain-upcoming #main {
