--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -391,7 +391,7 @@ html, body {
 .theme-ymca--2017-compain-upcoming {
   height: 100%;
   position: relative;
-  background: $white url('../prototypes/ysr_2017/img/bg-page-upcoming.jpg') 50% 0 no-repeat;
+  background: none;
 
   .viewport,
   #main {
