--- a/openy_lily/sass/style.scss
+++ b/openy_lily/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'compass';
 @import 'breakpoint';
+@import 'global/mixins';
 @import 'global/colors';
 @import 'global/variables';
 @import 'global/fonts';
