--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -61,8 +61,8 @@
 {% include "@openy_lily/include/sidebar-search-and-menu.html.twig" %}
 
 <div class="viewport">
-  <header id="page-head" class="page-head clearfix">
-    <div class="top-navs navbar-fixed-top" data-spy="affix" data-offset-top="1">
+  <header id="page-head" class="page-head">
+    <div class="top-navs">
 
       {% include "@openy_lily/include/site-search.html.twig" %}
       {% include "@openy_lily/include/support.html.twig" %}
