--- a/openy_lily/sass/global/_fonts.scss
+++ b/openy_lily/sass/global/_fonts.scss
@@ -1,3 +1,37 @@
+
+@font-face {
+  font-family:'Cachet';
+  src: url('../fonts/cachetstd-book-webfont.eot');
+  src: url('../fonts/cachetstd-book-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/cachetstd-book-webfont.woff2') format('woff2'),
+  url('../fonts/cachetstd-book-webfont.woff') format('woff'),
+  url('../fonts/cachetstd-book-webfont.svg#cachetstd-book-webfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family:'Cachet Bold';
+  src: url('../fonts/cachetstd-bold-webfont.eot');
+  src: url('../fonts/cachetstd-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/cachetstd-bold-webfont.woff2') format('woff2'),
+  url('../fonts/cachetstd-bold-webfont.woff') format('woff'),
+  url('../fonts/cachetstd-bold-webfont.svg#cachetstd-bold-webfont') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family:'Cachet Medium';
+  src: url('../fonts/cachetstd-medium-webfont.eot');
+  src: url('../fonts/cachetstd-medium-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/cachetstd-medium-webfont.woff2') format('woff2'),
+  url('../fonts/cachetstd-medium-webfont.woff') format('woff'),
+  url('../fonts/cachetstd-medium-webfont.svg#cachetstd-medium-webfont') format('svg');
+  font-weight: 600;
+  font-style: normal;
+}
+
 @mixin cachet() {
   font-family: "Cachet",Arial,sans-serif;
   letter-spacing: -0.025em;
@@ -16,4 +50,5 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Cachet",Arial,sans-serif;
 }
