[YGH-473] styles for events paragraph

--- a/prototypes/scss/screen.scss
+++ b/prototypes/scss/screen.scss
@@ -35,6 +35,7 @@
 @import "./paragraphs/testimonials";
 @import "./paragraphs/camp_menu";
 @import "./paragraphs/1c";
+@import "./paragraphs/events";
 
 @import "./modules/forms";
 @import "./modules/gallery";
