YMCA-1605: change title color

--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -467,7 +467,7 @@ html, body {
   height: auto;
 }
 .theme-ymca--2017-compain-upcoming .compain-upcoming .compain-header .title {
-  color: #f47920;
+  color: #00aeef;
   margin-bottom: 50px;
   font-size: 46px;
   font-size: 4.6rem;
