--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -416,7 +416,7 @@ html, body {
       background: none;
       height: auto;
       .title {
-        color: $orange-medium;
+        color: $blue-light;
         margin-bottom: 50px ;
         @include rem(font-size, 46px);
         margin-top: 35px;
