--- a/paragraphs/featured_stories.scss
+++ b/paragraphs/featured_stories.scss
@@ -59,6 +59,9 @@
       @include breakpoint(0 $screen-sm) {
         margin: 0 auto;
       }
+      .quotes {
+        display: none;
+      }
     }
 
     img {
@@ -121,16 +124,19 @@
 
     &.blog-green .inner-wrapper {
       background-color: $green;
+
     }
 
     &.blog-fuchsia .inner-wrapper {
       background-color: $pink;
+
     }
 
     &.blog-photo .inner-wrapper {
       .blog-heading {
         background-color: rgba(35, 31, 32, 0.5);
       }
+
     }
 
     &.blog-color .inner-wrapper {
@@ -144,7 +150,8 @@
       @media (min-width: 1200px) {
         height: 350px;
       }
-      }
+
+    }
 
 
     &.blog-story .inner-wrapper {
@@ -153,6 +160,21 @@
       h2,
       h4 {
         color: $purple;
+      }
+
+      .quotes {
+        display: inline-block;
+        font-size: 100px;
+        font-family: Helvetica Neue LT W01_55 Roman;
+        height: 35px;
+        vertical-align: top;
+        position: relative;
+        top: -20px;
+      }
+
+      span:not(.quotes) {
+        display: inline-block;
+        width: 80%;
       }
     }
 
@@ -167,6 +189,8 @@
         color: $purple;
       }
     }
+
+
 
     .quote {
       float: left;
