--- a/docroot/themes/custom/ymca/templates/sidebar-search-and-menu.html.twig
+++ b/docroot/themes/custom/ymca/templates/sidebar-search-and-menu.html.twig
@@ -19,7 +19,7 @@
 
   {% if not hide_mobile_sign_button %}
     <div class="col-xs-12">
-      <a class="btn btn-block btn-default" href="http://ygtcprod2.personifycloud.com/PersonifyEBusiness/Default.aspx?TabID=337">{{ "Sign In"|t }}</a>
+      <a class="btn btn-block btn-default" href="https://account.ymcamn.org/PersonifyEBusiness/Default.aspx?TabID=337">{{ "Sign In"|t }}</a>
     </div>
   {% endif %}
 
