--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -8440,6 +8440,11 @@ body .ajax-progress-throbber .throbber {
   max-height: 500px;
 }
 
+.navbar-default #block-top-menu-2 .navbar-nav > li {
+  display: inline-block;
+  float: none;
+}
+
 .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
   padding: 3px 15px;
   border-radius: 5px;
@@ -8447,7 +8452,6 @@ body .ajax-progress-throbber .throbber {
   text-transform: capitalize;
   font-weight: bold;
   font-size: 17px;
-  margin-top: 26px;
   line-height: 20px;
   color: #fff;
   text-shadow: none;
