--- a/openy_lily/sass/style.scss
+++ b/openy_lily/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'misc/location';
 @import 'misc/node-preview';
 @import 'misc/search';
+@import 'misc/blog';
 @import 'global/openy-lily-styles';
 @import 'misc/forms';
 @import 'misc/mindbody';
