YMCA-1610: base_path is not set (even variable['base_path']), use page.base_path for this

--- a/docroot/modules/custom/ymca_retention/templates/pages/page--challenge--upcoming.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/pages/page--challenge--upcoming.html.twig
@@ -67,9 +67,8 @@
                 <div class="compain-header--content">
                     <div class="container">
                         <div class="logo">
-                            <img alt="logo" src="{{ base_path }}themes/custom/ymca/img/ymca-logo.svg">
+                            <img alt="logo" src="{{ page.base_path }}themes/custom/ymca/img/ymca-logo.svg">
                         </div>
-
                         <div class="content">
                             <div class="title">Y CHALLENGE</div>
                             <hr>
@@ -77,10 +76,10 @@
                             <div class="sub-title-grey">Download the app, available on Android and iOS</div>
                             <p>
                                 <a href="https://play.google.com/store/apps/details?id=com.netpulse.mobile.ymcatwincities">
-                                    <img alt="Android App on Google Play" border="0" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/mobile-app-landing-page-icon-google-play-2.png" title="">
+                                    <img alt="Android App on Google Play" border="0" src="{{ page.base_path }}themes/custom/ymca/prototypes/ysr_2017/img/mobile-app-landing-page-icon-google-play-2.png" title="">
                                 </a>
                                 <a href="https://itunes.apple.com/us/app/ymca-twin-cities/id1112258810?ls=1&mt=8">
-                                    <img alt="Download on the App Store" border="0" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/mobile-app-landing-page-icon-apple.png" title="">
+                                    <img alt="Download on the App Store" border="0" src="{{ page.base_path }}themes/custom/ymca/prototypes/ysr_2017/img/mobile-app-landing-page-icon-apple.png" title="">
                                 </a>
                             </p>
                         </div>
