UAT updates to page

--- a/docroot/modules/custom/ymca_retention/templates/pages/page--challenge--upcoming.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/pages/page--challenge--upcoming.html.twig
@@ -73,7 +73,7 @@
                             <div class="title">Y CHALLENGE</div>
                             <hr>
                             <div class="sub-title">Thank you for participating in the Y Recharge Challenge.<br> Keep an eye out for the next promotion and in the meantime, try our new mobile app challenges.</div>
-                            <div class="sub-title-grey">Download the app, available on Android and iOS</div>
+                            <div class="sub-title-grey">Download the app, available on Android and <span>iOS</span></div>
                             <p>
                                 <a href="https://play.google.com/store/apps/details?id=com.netpulse.mobile.ymcatwincities">
                                     <img alt="Android App on Google Play" border="0" src="{{ page.base_path }}themes/custom/ymca/prototypes/ysr_2017/img/mobile-app-landing-page-icon-google-play-2.png" title="">
