--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -222,6 +222,10 @@ html, body {
   height: 100%;
 }
 
+.sub-title-grey span {
+  text-transform: none;
+}
+
 .theme-ymca--2017-compain-winners {
   height: 100%;
   position: relative;
