--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -195,6 +195,10 @@ html, body {
   }
 }
 
+.sub-title-grey span {
+  text-transform: none;
+}
+
 .theme-ymca--2017-compain-winners {
   height: 100%;
   position: relative;
@@ -467,3 +471,4 @@ html, body {
   }
 
 }
+
