--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--webform--default.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--webform--default.html.twig
@@ -45,13 +45,5 @@ set classes = [
 ]
 %}
 <article{{ attributes.addClass(classes) }}>
-  <div class="col-sm-5 col-md-4 image">
-    <a href="{{ content.field_prgf_link.0['#url'] }}">{{ content.field_prgf_image }}</a>
-  </div>
-  <div class="col-sm-7 content">
-    <h2>{{ content.field_prgf_title }}</h2>
-    {{ content.field_prgf_description }}
-    <a href="{{ content.field_prgf_link.0['#url'] }}" class="btn btn-link blue">{{ content.field_prgf_link.0['#title'] }}</a>
-  </div>
+  {{ content }}
 </article>
-<p>Hello</p>
