--- a/themes/openy_themes/openy_rose/scss/modules/_footer.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_footer.scss
@@ -19,6 +19,7 @@
     background-size: contain;
     display: block;
     height: 56px;
+    margin-bottom: 20px;
     width: 72px;
     @include breakpoint(768px) {
       height: 75px;
@@ -31,6 +32,9 @@
       border-bottom: 1px solid $medium-grey;
       margin-bottom: 20px;
       margin-right: -15px;
+      &:last-of-type {
+        border-bottom: none;
+      }
       @include breakpoint(768px) {
         border-bottom: none;
         display: inline-block;
@@ -77,8 +81,11 @@
   }
   .footer__social {
     border-top: 1px solid $medium-grey;
-    margin: -21px -15px 0;
+    margin-left: -15px;
     padding: 25px 0px 10px 25px;
+    @include breakpoint(0 $screen-md) {
+      width: 110%;
+    }
     @include breakpoint($screen-xs) {
       padding: 25px 45px 10px 60px;
     }
